add logout/refresh-token, add refreshMiddleware, update docs
