# src/features/auth/api/router.ts
@@ -6,7 +6,9 @@ export const AuthRouter = Router();
 
 const AuthController = {
     login: RequestHandlers.loginHandler,
+    logout: RequestHandlers.logoutHandler,
     registration: RequestHandlers.registrationHandler,
+    refreshToken: RequestHandlers.refreshTokenHandler,
     registrationConfirmation: RequestHandlers.registrationConfirmationHandler,
     registrationEmailResending: RequestHandlers.registrationEmailResendingHandler,
     me: RequestHandlers.meHandler,
@@ -14,6 +16,8 @@ const AuthController = {
 
 AuthRouter.get('/me', ...Validators.meValidators, AuthController.me);
 AuthRouter.post('/login', ...Validators.loginValidators, AuthController.login);
+AuthRouter.post('/logout', ...Validators.logoutValidators, AuthController.logout);
+AuthRouter.post('/refresh-token', ...Validators.refreshTokenValidators, AuthController.refreshToken);
 AuthRouter.post('/registration', ...Validators.registrationValidators, AuthController.registration);
 AuthRouter.post(
     '/registration-confirmation',
